feat: update spring-boot version and fix some java deprecation issues